#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSQt
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-16
2015-09-09 Mikhail S. Dubrovin
- DragStore.cpp, GeoImage.cpp - increase (0,0) offset for big gaps like in pnccd (PSAS-34)
	xy0_off_pix[2] and center_raw (1000,1000) -> (2000,2000)

Tag: V00-00-15
2015-04-02 Mikhail S. Dubrovin
- code cleenup, cosmetic improvement of messages, in SConscript add DOCGEN
	
Tag: V00-00-14
2015-03-26 Mikhail S. Dubrovin
- Improve doxygen documentation, cleenup code (PSAS-11) 

Tag: V00-00-13
2015-03-23 Mikhail S. Dubrovin
- Add modules WdgColorBar, WdgRadHist, WdgSpecHist, 
- add multiple protections - the 1st stable version with all basic features (PSAS-11)
	
2015-03-11 Mikhail S. Dubrovin
- in GeoImage, WdgImage, ImageProc, GUIMain, GUIImageViewer signals and slots slots transfer ndarray w/o const
- GUIMain - clean-up code
- GUILogger - add showframe parameter
	
2015-03-10 Mikhail S. Dubrovin
- Multiple changes in modules:
M       app/geo.cpp - add input parameter parsing
M       app/test_QGraphicsView.cpp - remove unused includes
M       GUIImageViewer - add buttons to open/close colors, radial histogram, spectral windows
M       GeoImage - some improvement in transfer of the raw image ndarray as a reference
M       DragCenter - add signal centerIsChanged(const QPointF&), forceToEmitSignal() and testing methods.
M       WdgImage - add slot onHueAnglesUpdated(const float&, const float&), some reservation for intensity range pars.
M       WdgColorTable - add button "Apply" and emit hueAnglesUpdated(const float&, const float&) ;
M       QGUtils - add parameter/auto-range in getUint32NormalizedImage