@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-17
+2015-09-09 Mikhail S. Dubrovin
+- WdgFile::onButFile - fix bug in parsing input file name (PSAS-34)
+	
 Tag: V00-00-16
 2015-09-09 Mikhail S. Dubrovin
 - DragStore.cpp, GeoImage.cpp - increase (0,0) offset for big gaps like in pnccd (PSAS-34)
